# fastworker

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINAL_SUMMARY.md  MANIFEST.in  PYPI_RELEASE.md  README.md  SECURITY.md  pyproject.toml  start_example.sh
.github/workflows/: ci.yml  publish.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  FINAL_IMPLEMENTATION_SUMMARY.md  USAGE_EXAMPLE.md  api.md  async-patterns.md  clients.md  configuration.md  control_plane.md  fastapi.md  frameworks.md  gui.md  index.md  limitations.md  nng_patterns.md  security.md  specs.md  telemetry.md  troubleshooting.md  workers.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/advanced/: extending.md  internals.md  telemetry.md
documentation/docs/concepts/: architecture.md  async-patterns.md  control-plane.md  tasks.md  workers.md
documentation/docs/getting-started/: configuration.md  installation.md  project-structure.md  quickstart.md  why-fastworker.md
documentation/docs/guide/: caching.md  client.md  gui.md  periodic-tasks.md  priorities.md
documentation/docs/integration/: fastapi.md  frameworks.md
documentation/docs/reference/: api.md  benchmarks.md  limitations.md  troubleshooting.md
fastqueue/: __init__.py  cli.py  main.py
fastqueue/clients/: client.py  discovery.py
fastqueue/examples/: callback_example.py  fastapi_example.py  tasks.py
fastqueue/patterns/: nng_patterns.py
fastqueue/tasks/: models.py  registry.py  serializer.py
fastqueue/telemetry/: __init__.py  metrics.py  tracer.py
fastqueue/tests/: integration_test.py  test_callbacks.py  test_fastqueue.py
fastqueue/workers/: __init__.py  control_plane.py  subworker.py  worker.py
fastworker/: __init__.py  cli.py  main.py
fastworker-env/: pyvenv.cfg
fastworker/clients/: __init__.py  client.py  discovery.py
fastworker/examples/: callback_example.py  fastapi_example.py  tasks.py
fastworker/examples/level2_package/tasks/: __init__.py  emails.py  reports.py
fastworker/examples/level3_organized/app/services/: notifications.py
fastworker/examples/level3_organized/app/tasks/: __init__.py  background.py  scheduled.py
fastworker/gui/: __init__.py  server.py
fastworker/gui/frontend/: build.sh  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
fastworker/gui/frontend/src/: App.vue
fastworker/gui/frontend/src/components/: QueuesPanel.vue  RegisteredTasksPanel.vue  StatsCard.vue  TasksTable.vue  WorkersPanel.vue
fastworker/gui/static/: index.html
fastworker/gui/static/assets/: index-CVn1fagy.js  index-Cq7ibML2.css  index-Dkr6IOki.css  index-DvPqQCCO.js
fastworker/integration/: fastapi.py
fastworker/patterns/: __init__.py  nng_patterns.py
fastworker/tasks/: __init__.py  models.py  registry.py  schedules.py  serializer.py  state.py
fastworker/telemetry/: __init__.py  metrics.py  tracer.py
fastworker/utils/: __init__.py  event_bus.py  hooks.py  state_machine.py
fastworker/workers/: __init__.py  control_plane.py  state.py  subworker.py  worker.py
tests/: integration_test.py  test_callbacks.py  test_cli.py  test_client.py  test_control_plane.py  test_discovery.py  test_fastqueue.py  test_gui_server.py  test_models.py  test_nng_patterns.py  test_schedules.py  test_serializer.py  test_state_machine.py  test_subworker.py  test_task_state.py  test_telemetry_metrics.py  test_telemetry_tracer.py  test_worker.py  test_worker_state.py
