[project]
name = "fastworker"
version = "0.1.1"
description = "A brokerless task queue using nng patterns"
authors = [{name = "Dipankar Sarkar", email = "me@dipankar.name"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["task-queue", "celery", "nng", "brokerless", "async", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pynng>=0.8.1",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/neul-labs/fastworker"
Repository = "https://github.com/neul-labs/fastworker"
Documentation = "https://github.com/neul-labs/fastworker/blob/main/docs/index.md"

[project.scripts]
fastworker = "fastworker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
